@@ -73,4 +73,7 @@ quest.energy_sphere.chance=0.1
 
 encounter.bork_pirates.count=3
 
+# if set to true, both player ship and landing party do not take damage from attacks
 cheat.invulnerability=false
+# if set to true, all dungeon victory conditions are always true
+cheat.skipDungeons=false
